Fix(footer):align

--- a/style_reservia.css
+++ b/style_reservia.css
@@ -30,7 +30,7 @@ footer {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
-  padding-left: 20px;
+  padding-left: 33px;
   background-color: #f2f2f2;
   font-size: 12px;
 }
@@ -50,7 +50,7 @@ footer {
 @media all and (max-width: 600px) {
   footer {
     display: block;
-    padding-left: 8px;
+    padding-left: 30px;
   }
 }
 /*---------------------------------------------------------------------------------------------------------*/
